--- a/metanorma.env
+++ b/metanorma.env
@@ -1,4 +1,4 @@
 METANORMA_DOCTYPE=csd
 METANORMA_FORMATS=xml pdf html doc
-ENCRYPTION_LABEL=TODO
+ENCRYPTION_LABEL=58f96a9d300b
 COMMIT_AUTHOR_EMAIL=travis-ci@calconnect.org
