--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 .DS_Store
-.swp
-.tmp.xml
-
-# Output files
-csd-*.html
-csd-*.doc
-csd-*.xml
-csd-*_files
-
-# Deploy key
-deploy_key
+*.abort
+*.err
+relaton/
+.vscode/
+.ruby-lsp/
+Gemfile.lock
+iev/
+_site/
